// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoToggle 快照测试 mode=audio 匹配快照 1`] = `
<DocumentFragment>
  <div
    class="at-hover"
    data-no-advance="true"
  >
    <button
      class="at-btn at-audio"
      title="切换播放模式（M）"
    >
      <span
        class="at-dot"
      />
      <span
        class="at-label"
      >
        AUDIO
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`AutoToggle 快照测试 mode=auto 匹配快照 1`] = `
<DocumentFragment>
  <div
    class="at-hover"
    data-no-advance="true"
  >
    <button
      class="at-btn at-auto"
      title="切换播放模式（M）"
    >
      <span
        class="at-dot"
      />
      <span
        class="at-label"
      >
        AUTO
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`AutoToggle 快照测试 mode=manual 匹配快照 1`] = `
<DocumentFragment>
  <div
    class="at-hover"
    data-no-advance="true"
  >
    <button
      class="at-btn at-manual"
      title="切换播放模式（M）"
    >
      <span
        class="at-dot"
      />
      <span
        class="at-label"
      >
        MANUAL
      </span>
    </button>
  </div>
</DocumentFragment>
`;
